--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -1,5 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: .NET
 
@@ -29,4 +27,25 @@ jobs:
       run: dotnet restore SeleniumBasicExercise.sln
     - name: Build
       run: dotnet build SeleniumBasicExercise.sln --no-restore
+
+    - name: Run Tests Project1
+      env:
+        CHROME_BIN: /usr/bin/google-chrome
+      run: |
+        echo "Running Tests Project1"
+        dotnet test TestProject1/TestProject1.csproj --verbosity normal
+
+    - name: Run Tests Project2
+      env:
+        CHROME_BIN: /usr/bin/google-chrome
+      run: |
+        echo "Running Tests Project2"
+        dotnet test TestProject2/TestProject2.csproj --verbosity normal
+
+    - name: Run Tests Project3
+      env:
+        CHROME_BIN: /usr/bin/google-chrome
+      run: |
+        echo "Running Tests Project3"
+        dotnet test TestProject3/TestProject3.csproj --verbosity normal
 
